Added detail page, autocomplete in search form and filtering on delivered status